implementing peskin comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@290 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -132,12 +132,13 @@
 \label{sec:EFTValidity} 
 \input{tex/EFTValidity.tex}
 
- \chapter{Recommendations for evaluation of signal theoretical uncertainties}
- \label{sec:TheoryUncertainties} 
- \input{tex/TheoryUncertainties.tex}
+\chapter{Recommendations for evaluation of signal theoretical uncertainties}
+\label{sec:TheoryUncertainties} 
+\input{tex/TheoryUncertainties.tex}
 
- \chapter{Conclusions}
- \input{tex/Conclusions.tex}
+\chapter{Conclusions}
+\label{chapter:conclusions}
+\input{tex/Conclusions.tex}
  
 %%\input{tex/backmatter.tex}
 
