--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -105,6 +105,9 @@
 \newcommand{\modelDMStloop}{\texttt{DMS\_tloop}\xspace}
 \newcommand{\schannel}{\ensuremath{s\text{-channel}}\xspace}
 \newcommand{\tchannel}{\ensuremath{t\text{-channel}}\xspace}
+\newcommand{\spinzero}{\ensuremath{\text{spin-}0}\xspace}
+\newcommand{\spinone}{\ensuremath{\text{spin-}1}\xspace}
+\newcommand{\spintwo}{\ensuremath{\text{spin-}2}\xspace}
 
 % math
 
