--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -8,7 +8,7 @@
 Three benchmark simplified models \cite{Carpenter:2013xra,Berlin:2014cfa} 
 are recommended for Higgs+\MET searches:
 \begin{itemize}
-	\item A model where a leptophobic vector mediator ($Z_B^\prime$) is exchanged in the $s-$channel, 
+	\item A model where a leptophobic vector mediator ($Z_B^\prime$) is exchanged in the \schannel, 
 	radiates a Higgs boson and decays into two DM particles (Fig.~\ref{fig:feyn_prod_monoH} (a));
     \item A model where a scalar mediator $S$ couples to the SM only 
 	through the SM Higgs and decays to two DM particles (Fig.~\ref{fig:feyn_prod_monoH_S});
@@ -219,7 +219,7 @@ in the model considered for mono-Higgs signatures.
 %	2- Mention why we don't consider the dark Z model?]}
 
 The predictions of the model depend upon the two additional
-parameters beyond an s-channel simplified model, namely the
+parameters beyond an \schannel simplified model, namely the
 mixing angle between baryonic Higgs $h_B$ and the SM-like Higgs boson $\sin\theta$ and the coupling of the mediator to SM-like Higgs boson, $g_{h\Zprime \Zprime}$.
 Thus, a full model is specified by:
 
