--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -40,7 +40,7 @@ still worth comparing with searches in the jet+\MET final state.
 % the D1 (scalar SM/WIMP interaction), D5 (vector-vector interaction) and D9
 % (tensor interaction) operator.
 
-In the case of a spin-1 mediator,
+In the case of a \spinone mediator,
 an example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
 The interest for searches with W bosons in the final state
@@ -127,14 +127,14 @@ $\Gamma=\mMed/3$} \\ \hline
 \hline
 \end{tabular}
     \caption{Analysis acceptance ratios for the photon+\MET analysis when varying the mediator width, in the
-    case of a vector mediator exchanged in the $s-$channel}%This plot will come from Marie-Helene
+    case of a vector mediator exchanged in the \schannel}%This plot will come from Marie-Helene
     \label{fig:DMV_EW_gamma_acceptance}
 \end{table}
 
 %% \begin{figure}
 %%     \includegraphics[width=0.7\textwidth]{figures/EW/acceptance_minwidth_vs_mo3_gamma}
 %%     \caption{Analysis acceptance for the photon+\MET analysis when varying the mediator width, in the
-%%     case of a vector mediator exchanged in the $s-$channel}%This plot will come from Marie-Helene
+%%     case of a vector mediator exchanged in the \schannel}%This plot will come from Marie-Helene
 %%     \label{fig:DMV_EW_gamma_acceptance}
 %% \end{figure}
 
@@ -165,6 +165,6 @@ for different mediator mass choices, for \mdm=15~\gev\label{fig:DMV_EW_Z_MET_SVM
 }    
 \caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
 for the simplified model
-       with a vector mediator exchanged in the $s-$channel.}
+       with a vector mediator exchanged in the \schannel.}
 \label{fig:DMV_EW_kinematics_SVMed}
 \end{figure}
