--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -200,7 +200,7 @@ couplings between dark matter and ordinary particles follows the same
 structure as the Standard Model. This choice is simple, since no
 additional theory of flavor is required, beyond what is already
 present in the SM, and it provides a mechanism to ensure that the
-models do not violate flavor constraints.  As a consequence, spin-0
+models do not violate flavor constraints.  As a consequence, \spinzero
 resonances must have couplings to fermions proportional to the SM Higgs couplings. 
 Flavor-safe models can still be constructed beyond the MFV
 assumption, for example ~\cite{Agrawal:2014aoa}, and deserve further study.
@@ -258,7 +258,7 @@ of scenarios where the mediating scale is not as large.
 Secondly, this report considers specific EFT benchmarks 
 whenever neither a simplified model completion 
 nor other simplified models yielding similar kinematic distributions are available. 
-This is the case for dimension 5-7 operators with direct 
+This is the case for dimension 5 or dimension 7 operators with direct 
 Dark Matter-electroweak boson couplings. 
 Considering these models as separate experimental benchmarks 
 will allow to target new signal regions and help validate the 
@@ -275,7 +275,7 @@ ensure a given fraction of events within the range of applicability of the EFT a
 
 \section{Structure of this report}
 
-The first chapter of the report is dedicated to simplified
+Chapter \ref{subsec:MonojetLikeModels} of the report is dedicated to simplified
 models with radiation of a hard object either from the initial state
 or from the mediator. These models produce primarily monojet signatures, 
 but should be considered for all \MET{}+X searches.
@@ -287,11 +287,11 @@ Appendix \ref{app:MonojetLikeModels_Appendix}.
 %details to appendix~\ref{app:TTBar_Xsecs}.  
 Chapter~\ref{subsec:EWSpecificModels} contains the benchmark model
 recommendations and choices for final states specifically containing an electroweak 
-boson ($W/Z/\gamma/H$). In this case, both
+boson ($W/Z/\gamma/H$). In this case, both 
 simplified models leading to mono-boson signatures
-and contact interaction operators wherever simplified models are not available are considered. 
-The final chapter is devoted to the treatment of the presentation of results for the benchmark
-models from contact interaction operators.
+and contact interaction operators are considered. 
+Chapter \ref{sec:EFTValidity} is devoted to the treatment of the presentation of results for the benchmark
+models from contact interaction operators. Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. Chapter \ref{sec:conclusions} concludes the report.
 Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
 should be included in the results of experimental searches to allow for further reinterpretation. 
 %The Appendices also collect information about the implementation of the
