--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -39,7 +39,7 @@ between the SM and DM.
 
 %Lagrangian
 We consider the case of a DM particle \chiDM of mass \mdm that is a Dirac fermion and where the production 
-proceeds via the exchange of a spin-1 mediator of mass \mMed in
+proceeds via the exchange of a \spinone mediator of mass \mMed in
 the \schannel, illustrated in Fig.~\ref{fig:OP}.
 
 \begin{figure}[h!]
@@ -79,7 +79,7 @@ the mediator and dark matter masses, and the mediator couplings to dark matter a
 \end{figure}
 
 We consider two models with vector and axial-vector couplings
-between the spin-1 mediator $\Zprime$ and SM and DM fields, with
+between the \spinone mediator $\Zprime$ and SM and DM fields, with
 the corresponding interaction Lagrangians:
 
 \begin{align}
@@ -360,7 +360,7 @@ mass points each. One point at very high mediator mass (5~\tev) is added for eac
 \hline
 \end{tabular}
 }
-\caption{Simplified model benchmarks for $s-$channel simplified models (spin-1 mediators 
+\caption{Simplified model benchmarks for \schannel simplified models (\spinone mediators 
 decaying to Dirac DM fermions in the V and A case, taking the minimum width for \gq = \gDM = 1)}.
 % Points in \textbf{bold} are only generated for the vector/axial vector cases, while points in 
 % \textit{italics} are generated for the monojet analysis 
@@ -455,8 +455,7 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 
 In this section, we consider a parallel situation to the \modelDMV and \modelDMA mediators in the previous sections: a real scalar or a pseudoscalar where the associated scalar is decoupled at higher energies\sidenote{This assumption does not hold in a UV-complete model where the two components of the complex scalar mediator would be approximately degenerate.  The complex scalar case could be studied separately in the case of heavy flavor final states given the sufficiently different kinematics.}. This section is largely based on Refs.~\cite{Buckley:2014fba,Harris:2014hga} which contain a thorough discussion of these models. 
 
-Assuming MFV,
-spin-$0$ resonances behave in a similar fashion as the SM Higgs boson. Relative to the \modelDMV and \modelDMA discussed above, these \modelDMS and \modelDMP models are distinguished by the special consequences of the MFV assumption, the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
+Assuming MFV, \spinzero resonances behave in a similar fashion as the SM Higgs boson. Relative to the \modelDMV and \modelDMA discussed above, these \modelDMS and \modelDMP models are distinguished by the special consequences of the MFV assumption, the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
 
  \begin{eqnarray}
 {\cal L}_{\phi} & = &
@@ -625,7 +624,7 @@ Like in the case of the vector and axial-vector models described in Section~\ref
 \subsection{Parameter scan}
 
 Similarly as in the case of the vector and axial-vector couplings
-of spin-1 mediators, scans in the parameter space are performed also for the scalar and pseudo-scalar couplings of the spin-0 mediators
+of \spinone mediators, scans in the parameter space are performed also for the scalar and pseudo-scalar couplings of the \spinzero mediators
 in order to decide on the optimized parameter grid for the presentation of Run-2 results. Figures\,\ref{fig:monojet_scan_S_g}-
 %, fig:monojet_scan_S_mDM1000,fig:monojet_scan_S_mDM100, fig:monojet_scan_S_mMed10, 
 \ref{fig:monojet_scan_S_mMed1000} show the scans over the couplings, Dark Matter mass and mediator mass and the same conclusions apply as in Section\,\ref{sec:monojet_V}.
@@ -692,7 +691,7 @@ One point at very high mediator mass (5~\tev) is added for each of the DM masses
 \hline
 \end{tabular}
 
-\caption{Simplified model benchmarks for $s-$channel simplified models (spin-0 mediators 
+\caption{Simplified model benchmarks for \schannel simplified models (\spinzero mediators 
 decaying to Dirac DM fermions in the scalar and pseudoscalar case, taking the minimum width for \gq = \gDM = 1)}.
 % Points in \textbf{bold} are only generated for the vector/axial vector cases, while points in 
 % \textit{italics} are generated for the monojet analysis 
@@ -714,7 +713,7 @@ decaying to Dirac DM fermions in the scalar and pseudoscalar case, taking the mi
 \subsection{Additional considerations for $V+\MET$ signatures}
 \label{sub:EW_Scalar}
 
-The discussion of parameters for the model with a color-singlet, spin-0 mediator
+The discussion of parameters for the model with a color-singlet, \spinzero mediator
 parallels that in Section~\ref{subsec:MonojetLikeModels}. 
 
 Even though the sensitivity of mono-boson searches to this model is low and it may not
@@ -729,7 +728,7 @@ described in Section~\ref{sub:EW_EFT_Dim5}, for later reinterpretation.
 %Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}.
 %\Todo{Add models and instructions for other final states}.
 
-\subsection{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+MET signatures}{Additional considerations for ttbar/bbbar+MET signatures}}
+\subsection{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+\MET signatures}{Additional considerations for ttbar/bbbar+\MET signatures}}
 \label{subsec:DMHFModels}
 \input{tex/TTBar.tex}
 
@@ -745,7 +744,7 @@ described in Section~\ref{sub:EW_EFT_Dim5}, for later reinterpretation.
 \label{sec:monojet_t_channel}
 \input tex/TChannelModels.tex
 
-\section{Spin-2 mediator}
+\section{Spin-$2$ mediator}
 
 In models with extra dimensions, the Kaluza-Klein excitations of the graviton could also serve as a mediator between the Standard Model and dark sector physics. This kind of model was not studied in the forum and is not included in the recommendations, but it and models such as Ref.~\cite{Lee:2013bua} may warrant further study on a longer timescale. 
 
@@ -930,7 +929,7 @@ The advantage of doing this is in the fact that no event selection and detector 
 
 It should be noted again that this procedure is only useful when the narrow width approximation applies. Care must be taken to ensure that is the case. For example, in the \modelDMV and \modelDMA case, one quickly breaks this approximation even for small $n$.
 
-\subsection{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+MET signatures}{Additional considerations for ttbar/bbbar+MET signatures}}
+\subsection{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+\MET signatures}{Additional considerations for ttbar/bbbar+\MET signatures}}
 
 The cross-section scaling considerations shown in~\ref{sec:monojet_scaling} still apply for this model. Here 
 we detail the specific studies done for the  $t\bar t$ model. 
