--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -1,4 +1,4 @@
-Models of bottom-flavored Dark Matter that are closely related to the $t-$channel mediated model from this 
+Models of bottom-flavored Dark Matter that are closely related to the \tchannel mediated model from this 
 Section have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. 
 Here, DM couples preferentially to bottom quarks, with a decoupled third generation. 
 We describe the $b$-FDM model of Ref.~\cite{Agrawal:2014una}, created to explain the Galactic Center (GC) 
