--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -33,7 +33,7 @@ first or second generation and the invisible $V$ boson (see the diagrams of
 
 %Within this model, two distinct processes can lead to monotop production:
 %\begin{itemize}
-%	\item resonant production, as shown in the diagram of Fig.~\ref{fig:feyn_prod} (a), where a color triplet scalar $\varphi$ or vector field are exchanged in the \schannel, and decay into a spin 1/2 invisible new fermion $\chiDM$ and a top quark;
+%	\item resonant production, as shown in the diagram of Fig.~\ref{fig:feyn_prod} (a), where a color triplet scalar $\varphi$ or vector field are exchanged in the \schannel, and decay into a spin-1/2 invisible new fermion $\chiDM$ and a top quark;
 %	\item non-resonant production, as shown in the diagrams of Fig.~~\ref{fig:feyn_prod} (b) and (c), where a flavor-changing interaction produces a top quark in association with a new colored scalar or vector $V$. The new particles decay invisibly, e.g. to a pair of DM particles. $V$ can also decay into a top quark and an up quark, leading to a same-sign top quark final state; a detailed study of the complementarity of this signature is beyond the scope of this Forum report.  
 %\end{itemize}
 
@@ -91,10 +91,10 @@ first or second generation and the invisible $V$ boson (see the diagrams of
 Feynman diagrams of leading order processes leading to monotop events: production of
 a coloured scalar resonance $\varphi$ decaying into a top quark and a spin-$1/2$ fermion $\chiDM$ (a),
 $s-$ (b) and \tchannel (c) non resonant production of a top quark in association with
-a spin-1 boson $V$ decaying invisibly.
+a \spinone boson $V$ decaying invisibly.
 %Feynman diagram of leading order processes leading to monotop events: resonant production of
 %$t$ via resonant new particle $M$ decaying into a top quark and $\Xnew$, which is the dark matter fermion $\chiDM$ (left),
-%and $s$ and $t$ channel non-resonant production of a top quark in association with $\Xnew$, which is the new particle $M$ (middle and right).
+%and \schannel and \tchannel non-resonant production of a top quark in association with $\Xnew$, which is the new particle $M$ (middle and right).
 }
 \label{fig:feyn_prod}
 \end{figure}
@@ -548,7 +548,7 @@ while the only allowed decay in the CMS implementation to the new fermion and a 
 %
 %For the non-resonant case, the cross-sections are given in Table~\ref{tab:S4R_Xsec} and are calculated with $\anonres=0.2$.
 %The cross-section diverges when $m(v_{met})$ tends to 0~GeV.  However, when the mass is exactly 0~GeV the cross-section has a finite value,
-%due to the specificity of the propagator for this massless spin-1 boson.
+%due to the specificity of the propagator for this massless \spinone boson.
 %\begin{table}[!htb]\centering
 %\begin{tabular}{l|r|r}
 %\hline \hline
