--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -11,7 +11,7 @@
 % and http://arxiv.org/abs/arXiv:1409.2893
 
 The preceding sections address models with a Dirac fermion coupled to
-the SM through exchange of a neutral spin-0 or spin-1 particle in an
+the SM through exchange of a neutral \spinero or \spinone particle in an
 \schannel process.  A \tchannel process may couple the SM and DM
 directly, leading to a different phenomenology.
 For completeness, we examine a
@@ -91,8 +91,8 @@ However, if the coupling $g$ includes a Yukawa coupling proportional to the quar
 and $g$ is sufficiently large, LHC searches will still be sensitive to this model, 
 as explained in Section~\ref{sec:singleb}.
 
-This model can also give a signal in the di-jet +
-MET channel when, for example, the $\chiDM$ is exchanged in the
+This model can also give a signal in the \MET + di-jet
+channel when, for example, the $\chiDM$ is exchanged in the
 \tchannel and the resulting $\phi$ pair each decay to a jet +
 $\chiDM$. Fig.~\ref{fig:tchannelDijet} shows the leading order diagrams.
 Except for the $gg$ induced process, di-jet production
@@ -122,7 +122,7 @@ to weak couplings.
 In the more general theories
 considered here, $g$ is free to take on large values of order 1 or
 more, and thus diagrams neglected in MSSM simulation can occur at a
-much higher rate here. While constraints from SUSY jets+MET analyses
+much higher rate here. While constraints from SUSY jets+\MET analyses
 on MSSM models can be recast to apply to the specific model in this report, 
 DM searches should also directly test their sensitivity to the MSSM benchmark models.
 %study analyses directly optimized for the diagrams which
@@ -339,7 +339,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
 \subsection{Parameter scan}
 
 Ref.~\cite{Papucci:2014iwa} studies the parameter space and obtains
-bounds on this model from LHC Run 1 mono-jet and dijets+MET data. The Forum did not exhaustively compare the kinematic distributions of this model as was done in the \schannel case. While this means the recommendations below should be taken with more caution, the model is plausible and distinctive, and it should be included in the design of LHC searches.
+bounds on this model from LHC Run 1 mono-jet and dijets+\MET data. The Forum did not exhaustively compare the kinematic distributions of this model as was done in the \schannel case. While this means the recommendations below should be taken with more caution, the model is plausible and distinctive, and it should be included in the design of LHC searches.
 
 As in the \schannel models, scans should be performed over
 $\mDM$ and $\Mphi$. The viable ranges of both parameters nearly
@@ -381,7 +381,7 @@ applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}.
 	\centering  
 	\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/metPt}
 	\caption{Missing transverse momentum distribution for the hadronic Z+\MET final state,
-		for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
+		for the simplified model with a colored scalar mediator exchanged in the \tchannel.}
 	\label{fig:TChan_EW_Zhad_MET}
 \end{figure}
 
@@ -389,11 +389,11 @@ applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}.
 	\centering  
 	\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/TChan_newplot.pdf}
 	\caption{Acceptance for the hadronic Z+\MET final state,
-		for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
+		for the simplified model with a colored scalar mediator exchanged in the \tchannel.}
 	\label{fig:TChan_EW_Zhad_acc}
 \end{figure}
 
-The discussion of the parameter scan for the $t-$ channel model
+The discussion of the parameter scan for the \tchannel model
 in the case of signatures including EW bosons
 parallels that of the monojet case. 
 %with the difference that in this case the kinematics does 
@@ -415,6 +415,6 @@ parallels that of the monojet case.
 %Appendix A.
 %
 
- \subsection{\texorpdfstring{Additional considerations for signatures with $b-$quarks + MET}{Additional considerations for signatures  with b-quarks + MET}}
+ \subsection{\texorpdfstring{Additional considerations for signatures with $b-$quarks + \MET}{Additional considerations for signatures  with b-quarks + \MET}}
  \label{sec:singleb}
  \input{tex/SingleB.tex}
