--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -47,11 +47,11 @@ association with $t\bar t$ (or $b\bar b$).}
 
 
 %one of the most simple UV complete extension of the effective field theory approach is the addition of a scalar mediator between DM and SM.
-%A gauge singlet mediator can have tree-level interactions with a singlet DM particle that is either a Dirac or Majorana fermion, or DM that is a scalar itself. The spin-$0$ mediator can either be a real or complex scalar; a complex scalar contains both scalar and pseudoscalar particles, whereas the real field only contains the scalar particle.
+%A gauge singlet mediator can have tree-level interactions with a singlet DM particle that is either a Dirac or Majorana fermion, or DM that is a scalar itself. The \spinzero mediator can either be a real or complex scalar; a complex scalar contains both scalar and pseudoscalar particles, whereas the real field only contains the scalar particle.
 %In this document we consider only two of the possible choices for this simplified model: one where the interaction with the SM is mediated by a real scalar, and the second where we consider only a light pseudoscalar, assuming that the associated scalar is decoupled from the low-energy spectrum. The kinematics of the two cases is sufficiently different to suggest that further investigation of the complex scalar case is needed but left for future studies. 
 
 %%CD: this sentence really belongs elsewhere: MG does not have the gluon loop
-%Couplings to the SM fermions can be arranged by mixing with the SM Higgs. Such models have interesting connections with Higgs physics, and can be viewed as generalizations of the Higgs portal to DM. The most general scalar mediator models will have renormalizable interactions between the SM Higgs and the new scalar $\phi$ or pseudoscalar $a$, as well as $\phi/a$ interactions with electroweak gauge bosons. Such interactions are model dependent, often subject to constraints from electroweak precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike, for instance, the $\met+\textrm{jets}$ searches). As a result, for this class of minimal simplified models with spin-$0$ mediators, we will focus primarily on couplings to fermions and loop-induced couplings to gluons. Possible couplings to the electroweak sector may also lead to interesting DM phenomenology that can be studied in the context of Higgs Portal DM.
+%Couplings to the SM fermions can be arranged by mixing with the SM Higgs. Such models have interesting connections with Higgs physics, and can be viewed as generalizations of the Higgs portal to DM. The most general scalar mediator models will have renormalizable interactions between the SM Higgs and the new scalar $\phi$ or pseudoscalar $a$, as well as $\phi/a$ interactions with electroweak gauge bosons. Such interactions are model dependent, often subject to constraints from electroweak precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike, for instance, the $\met+\textrm{jets}$ searches). As a result, for this class of minimal simplified models with \spinzero mediators, we will focus primarily on couplings to fermions and loop-induced couplings to gluons. Possible couplings to the electroweak sector may also lead to interesting DM phenomenology that can be studied in the context of Higgs Portal DM.
 
 %\subsection{Model and assumption for fermionic DM}
 
@@ -96,7 +96,7 @@ association with $t\bar t$ (or $b\bar b$).}
 %\section{Specific models involving $b-$ quarks in the final state}
 
 In some theoretically motivated scenario (e.g. for high $tan\beta$ in 2HDM in the pMSSM), 
-spin-0 mediators might couple more strongly to down generation quarks.
+\spinzero mediators might couple more strongly to down generation quarks.
 This assumption motivates the study of final states involving $b$-quarks 
 as a complementary search to the $t\bar
 t$+DM models, to directly probe the $b$-quark coupling. 
@@ -107,7 +107,7 @@ experimentally visible $b$ quark, leading to a mono-$b$ signature in a model tha
 
 %\subsubsection{Parameter scan}
 
-%As discussed in Sec.~\ref{subsec:MonojetLikeModels}, the MFV and universal coupling assumptions for spin-$0$ 
+%As discussed in Sec.~\ref{subsec:MonojetLikeModels}, the MFV and universal coupling assumptions for \spinzero
 %mediators lead to quark mass dependent Yukawa couplings and therefore dominant couplings to top quarks.
 
 The parameter scan for the dedicated $t\bar{t}$+\MET{} searches has been studied in detail to target the production 
@@ -232,7 +232,7 @@ The same benchmark parameters of the $t\bar t$ case could then be chosen.
 %  $500$  &                                               $500$, $1000$, $1500$  \\
 % \hline
 % \end{tabular}
-% \caption{Simplified model benchmarks for $t\bar{t}$+DM production via spin-0 mediators decaying to Dirac DM fermions taking the minimum width presciption for $g_v = \gDM = 1$.}
+% \caption{Simplified model benchmarks for $t\bar{t}$+DM production via \spinzero mediators decaying to Dirac DM fermions taking the minimum width presciption for $g_v = \gDM = 1$.}
 % \label{tab:ttdm_benchmarks}
 % \end{table}
 % 
