--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -8,7 +8,7 @@
 \section{Specific models involving $b$-quarks in the final state}
 
 In some theoretically motivated scenario (e.g. for high $tan\beta$ in 2HDM in the pMSSM), 
-spin-0 mediators might couple more strongly to down generation quarks.
+\spinzero mediators might couple more strongly to down generation quarks.
  This assumption motivates the study of final states involving $b$-quarks 
  as a complementary search to the $t\bar
 t$+DM models presented in the previous section, to directly probe the $b$-quark coupling. 
