--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -1,8 +1,8 @@
-\section{\texorpdfstring{Models with a single $top-$quark + MET}{Models with a single top-quark + MET}}
+\section{\texorpdfstring{Models with a single $top-$quark + \MET}{Models with a single top-quark + \MET}}
 \label{sec:singletop}
 \input{tex/SingleTop.tex}
 
-\section{Further W+MET models with possible cross-section enhancements} 
+\section{Further W+\MET models with possible cross-section enhancements} 
 
 %Contributed by Yang Bai
 
@@ -58,7 +58,7 @@ L\subset m_s S^2 + \lambda S^2H^2 +\lambda^{'} S H^2 + y S \chiDM \overline{\chi
 \end{equation}
 Where H is a field in the Higgs sector that contains part of the electroweak vacuum expectation value, 
 S is a heavy scalar singlet and $\chiDM$ is a Dark Matter field. 
-There is then an S channel diagram where DM pairs couple to the singlet field S, 
+There is then an \schannel diagram where DM pairs couple to the singlet field S, 
 which then mixes with a Higgs-sector field, and couples to W and Z bosons. 
 This diagram contains 2 insertions of EW symmetry breaking fields, 
 corresponding in form to the effective dimension-5 operator in Section~\ref{sub:EW_EFT_Dim5}.
