--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -1,7 +1,7 @@
-\section{\texorpdfstring{Implementation of \schannel and \tchannel models for \MET+X analyses}{Implementation of \schannel and \tchannel models for MET+X analyses}}
+\section{\texorpdfstring{Implementation of \schannel and \tchannel models for \MET+X analyses}{Implementation of \schannel and \tchannel models for \MET+X analyses}}
 
 There are several matrix element implementations of the
-DM production through spin-0 and spin-1 mediators. This Appendix collects the 
+DM production through \spinzero and \spinone mediators. This Appendix collects the 
 generator recommendations and available implementations
 of these models for different final states, together with studies 
 of the matching between the matrix element and the parton shower. 
@@ -9,18 +9,18 @@ of the matching between the matrix element and the parton shower.
 \subsection{Implementation of models for mono-jet signature}
 \label{sec:monojet_implementation}
 
-For a spin-1 mediator, the implementation in \powheg generates
+For a \spinone mediator, the implementation in \powheg generates
 DM pair production with 1 parton at next-to-leading order (NLO), 
-whilst \madgraph and \mcfm are at leading order (LO)~\footnote{Spin-0 and spin-1 
+whilst \madgraph and \mcfm are at leading order (LO)~\footnote{Spin-$0$ and \spinone 
 mediator models will also be provided 
 in the near future to the same precision in \madgraph~\cite{Alwall:1405.0301}.}. As shown in \powheg Ref.\,\cite{Haisch:2013ata}, including NLO corrections result in an enhancement in the cross section as compared to LO and though this is not significant, it does lead to a substantial reduction in the dependence on the choice of the renormalization and factorization scale and hence the theoretical uncertainty on the signal prediction. 
 Since NLO calculations are available for the process in \powheg, we recommend to proceed with \powheg as the generator of choice. 
 
-For a spin-0 mediator in the mono-jet final state, the top-quark loop is the most important consideration.
-The matrix element implementation of the \schannel spin-0 mediated DM production is available in \mcfm~\cite{Fox:2012ru,Harris:2014hga} and \powheg~\cite{Haisch:2015ioa} with the full top-loop calculation at LO.
+For a \spinzero mediator in the mono-jet final state, the top-quark loop is the most important consideration.
+The matrix element implementation of the \schannel \spinzero mediated DM production is available in \mcfm~\cite{Fox:2012ru,Harris:2014hga} and \powheg~\cite{Haisch:2015ioa} with the full top-loop calculation at LO.
 The \powheg and \mcfm implementations include the finite
 top quark mass dependence for DM pair production with 1 parton at LO.
-For consistency with the spin-1 generation, we recommend using \powheg
+For consistency with the \spinone generation, we recommend using \powheg
 for this case as well.
 
 Here, we document some specific settings needed to run the \powheg 
@@ -103,7 +103,7 @@ here is my suggestion for the POWHEG section.''}
   Forum studies. 
 
   While not recommended, the alternative, a running width for the
-  propagator of the s-channel mediator, can be selected by setting
+  propagator of the \schannel mediator, can be selected by setting
   runningwidth to 1. In this case the denominator of the mediator's
   propagator
 \begin{equation*}
@@ -159,11 +159,11 @@ a discussion.
 % \end{itemize}
 
 Figure\,\ref{fig:monojet_narrow} suggests a change in the shape of the
-$\MET$ distribution for a $\mMed=5$~\tev mediator
+\MET distribution for a $\mMed=5$~\tev mediator
 once $\Gamma_{\rm{min}}/\mMed$ is of the order of a percent or lower.
 Such heavy mediators, although inacessible by the LHC data, are interesting since they provide a good approximation for benchmark EFT models.
 The observed difference among the simplified models in the plot arises from the fact that the region of low invariant masses of the Dark Matter pair, $m_{\bar{\chiDM}\chiDM}$, is suppressed due to narrow Breit-Wigner peak that only probes a narrow window of parton distribution functions. For wider mediators, the low mass region is significantly enhanced by parton distribution functions at low Bjorken $x$, as illustrated in Fig.\,\ref{fig:monojet_mchichi}.
-This explains why the sample with the narrowest mediator in Fig.\,\ref{fig:monojet_narrow} is heavily suppressed in terms of production cross section and also gives different $\MET$ shape.
+This explains why the sample with the narrowest mediator in Fig.\,\ref{fig:monojet_narrow} is heavily suppressed in terms of production cross section and also gives different \MET shape.
 %In general, for such extreme parameter choices the EFT model should give the correct answer.
 Furthermore, Fig.\,\ref{fig:monojet_narrow} compares the vector model with 5~\tev mediator to the D5 EFT sample and reveals that the simplified models with larger mediator widths (e.g. for couplings of 1) are the ones resembling the kinematics of contact interactions. This is because the production in the EFT model is always off-shell, i.e. no peak in the $m_{\bar{\chiDM}\chiDM}$ distribution is present.
 
