--- a/doc/tex/ScalarModels.tex
+++ b/doc/tex/ScalarModels.tex
@@ -1,6 +1,6 @@
-\section{Spin-0 Mediators}\label{sec:scalar}
+\section{Spin-$0$ Mediators}\label{sec:scalar}
 
-One of the most straightforward Simplified Models to contemplate is connecting dark matter to the visible sector through a spin-0 mediator, either a scalar or a pseudoscalar. Such models have intriguing connections with Higgs physics, and can be viewed as generalizations of the Higgs Portal to dark matter. The most general scalar mediator models will of course have renormalizable interactions between the Standard Model Higgs and the new scalar $\phi$ or pseudoscalar $A$, as well as $\phi/A$ interactions with electroweak gauge bosons. Such interactions are model-dependent, often subject to constraints from electroweak-precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike the $\slashed{E}_T$ plus jets searches, for example). As a result, for this class of simplified models with spin-0 mediators, we suggest focusing exclusively on the couplings to fermions, and induced couplings to gluons, leaving the possibilities opened up by couplings to the electroweak sector to the discussion of Higgs Portal dark matter.
+One of the most straightforward Simplified Models to contemplate is connecting dark matter to the visible sector through a \spinzero mediator, either a scalar or a pseudoscalar. Such models have intriguing connections with Higgs physics, and can be viewed as generalizations of the Higgs Portal to dark matter. The most general scalar mediator models will of course have renormalizable interactions between the Standard Model Higgs and the new scalar $\phi$ or pseudoscalar $A$, as well as $\phi/A$ interactions with electroweak gauge bosons. Such interactions are model-dependent, often subject to constraints from electroweak-precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike the $\slashed{E}_T$ plus jets searches, for example). As a result, for this class of simplified models with \spinzero mediators, we suggest focusing exclusively on the couplings to fermions, and induced couplings to gluons, leaving the possibilities opened up by couplings to the electroweak sector to the discussion of Higgs Portal dark matter.
 
 In our benchmark models, we will consider two possibilities for the CP assignment of the mediator (scalar and pseudoscalar), and two spin-assignments for the dark matter itself (scalar and fermionic). We provide here the Simplified Model for the interactions of the mediator, the relevant equations for scattering with nucleons and self-annihilation, and a discussion of some important issues in simulating events at the LHC. Throughout, we will assume Minimal Flavor Violation (MFV) for the couplings of the mediators to Standard Model fermions.
 
@@ -49,7 +49,7 @@ We now turn to the constraints on these models from non-collider experiments: th
 
 % \paragraph{Thermal Cross Sections}
 % 
-% The thermally-average annihilation of dark matter through the spin-0 mediators can be calculated from the Simplified Model Eqs.~\eqref{eq:scalarlag} and \eqref{eq:pseudoscalarlag}. The resulting cross sections for annihilation into Standard Model fermions, as a function of the dark matter temperature $T$ are
+% The thermally-average annihilation of dark matter through the \spinzero mediators can be calculated from the Simplified Model Eqs.~\eqref{eq:scalarlag} and \eqref{eq:pseudoscalarlag}. The resulting cross sections for annihilation into Standard Model fermions, as a function of the dark matter temperature $T$ are
 % \begin{eqnarray*}
 % \langle \sigma v \rangle(\chiDM\bar{\chiDM} \to \phi^* \to f\bar{f}) & = & N_c \frac{3 g_\chiDM^2 g_v^2 y_f^2 (\mDM^2 - m_f^2)^{3/2}}{8\pi \mDM^2\left[ (m_\phi^2 - 4\mDM^2)^2 + m_\phi^2\Gamma^2_\phi \right]} T, \label{eq:scalarthermal} \\
 % \langle \sigma v \rangle(\chiDM\bar{\chiDM} \to a^* \to f\bar{f}) & = & N_c \frac{g_\chiDM^2 g_v^2 y_f^2 }{4\pi \left[ (m_a^2 - 4\mDM^2)^2 + m_a^2\Gamma^2_a \right]} \left[ \mDM^2 \sqrt{1-\frac{m_f^2}{\mDM^2}} + \frac{3m_f^2}{4\mDM \sqrt{1-\frac{m_f^2}{\mDM^2}}} T \right].  \label{eq:pseudoscalarthermal} \\
